--- a/authorization/templates/authorization/index.html
+++ b/authorization/templates/authorization/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="rw-block">
     <div class="logo-hp">
-      <img style="width: 100%; height: 100%;" src="{% static 'authorization/img/v24_18.png' %}" alt="logo">
+      <img style="width: 500px; height: 600px;" src="{% static 'authorization/img/v24_18.png' %}" alt="logo">
     </div>
 
     <div class="reg-block-hp">
