--- a/authorization/static/authorization/css/style.css
+++ b/authorization/static/authorization/css/style.css
@@ -35,9 +35,12 @@
 }
 
 .logo-hp {
-  order: 1; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  order: 0;
   height: 100%;
-  width: 45%;
+  width: 50%;
   min-width: 500px;
 }
 .reg-block-hp {
