--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -17,7 +17,7 @@
   }
   button, input, select, textarea {
   font: inherit;
-  user-select: none;
+  user-select: none;  outline: none;
   }
   button {
     all: unset;
@@ -98,8 +98,8 @@
 .vis-nav-btn:active {
   background-color: #181818;
 }
-.home-r-search-line, .home-c-search-line {
-  color: #8B8B8B;
+.search-line, .home-c-search-line {
+  color: #ffffff;
   display: flex;
   height: fit-content;
   width: 100%;
@@ -109,12 +109,12 @@
   margin-top: 10px;
   margin-bottom: 50px;
 }
-.home-r-search-line img,
+.search-line img,
 .home-c-search-line img {
   border-radius: 50px;
   height: 40px;
 }
-.home-r-search-line p, 
+.search-line p, 
 .home-c-search-line p {
   padding-left: 10px;
 }
@@ -417,6 +417,7 @@
   min-height: 20px;
   height: fit-content;
   white-space: pre-wrap;
+  word-wrap: break-word;
 }
 .feedback_panel {
   display: flex;
@@ -561,13 +562,6 @@
 .home-centre-block .messages-button:active, .home-right-block .messages-button:active {
   background-color: #033252;
 }
-
-
-
-
-
-
-
 .messages-block {
   width: auto;
   height: auto; 
@@ -603,9 +597,113 @@
   font-size: 14px;
 }
 .header-of-chat {
+  display: flex;
+  align-items: center;
   width: auto;
-  height: 50px;
+  height: 60px;
   background-color: #202020;
   padding: 15px;
   color: white;
+}
+.input-message {
+  background-color: #383838;
+  color: #ffffff;
+  width: 100%;
+  height: auto;
+  border: 2px solid #202020;
+  border-left:  none;
+  resize: none;
+  padding: 15px 15px 0 15px;
+}
+.input-message::placeholder {
+  color: #878787;
+}
+.message-header {
+  display: flex;
+  padding: 5px;
+}
+.message-body {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  padding-left: 15px;
+  width: 87%;
+  background-color: #363636;
+  border-radius: 7px;
+}
+.message-info {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  width: auto;
+  padding-right: 10px;
+}
+.messages-area {
+  height: 75vh;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 570px;
+}
+.message {
+  display: flex;
+  height: auto;
+  width: 100%;
+  margin-top: 15px;
+  color: white;
+}
+.create-message-block {
+  display: flex;
+  width: 100%;
+  height: fit-content;
+  margin-top: 0;
+}
+
+
+
+
+.black-transparent-backgr {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 0;
+}
+.new-message-block {
+  position: absolute;
+  background-color: #2C2C2C;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 35%;
+  height: 65%;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+}
+.header-new-message-block {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  gap: 10px;
+  width: 100%;
+  height: fit-content;
+}
+.header-new-message-block p {
+  height: fit-content;
+  color: white;
+}
+.header-new-message-block .back-button {
+  margin: 0;
+  background-color: none;
+  color: white;
+}
+.body-new-message-block {
+  width: 100%;
+  height: fit-content;
+  border: 4px solid green;
+}
+.search-line ::placeholder {
+  color: #727272;
 }
