--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,10 @@
     <div class="home-page">
         {% block left-block %}    {% endblock %}
         {% block center-block %}    {% endblock %}
-        {% block right-block %}    {% endblock %}
+        {% block right-block %}    {% endblock %}  
+        {% if new_mess_filt %}
+            {% include 'includes/new_message.html' %}
+        {% endif %}
     </div>
     {% block add_comment %}    {% endblock %}
 <script src="{% static 'home/js/script.js' %}"></script>
