--- a/home/templates/home/lists.html
+++ b/home/templates/home/lists.html
@@ -66,10 +66,7 @@
         </button>
         <h4>Bookmarks</h4>
     </div>
-    <search class="home-c-search-line">
-        <img src="{% static 'home/img/search-icon.png' %}" alt=""> 
-        <p>Search...</p>
-    </search>
+    <search>{% include "includes/search.html" %}</search>
     <h1 style="position: relative;color: white; top: 20%; left: 20px;">Save posts for later</h1>
     <p style="position: relative;
     width: 50%;
@@ -82,9 +79,8 @@
 {% endblock %}
 {% block right-block %}
 <div class="home-right-block">
-    <search class="home-r-search-line">
-        <img src="{% static 'home/img/search-icon.png' %}" alt=""> 
-        <p>Search...</p>
+    <search style="margin-top: 20px;">
+        {% include "includes/search.html" %}
     </search>
     <div class="home-r-pinned-block">
         <label>{ Pinned function }</label>
