--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -393,6 +393,9 @@
   width: 100%;
   height: 100%;
 }
+.content-in-the-post:hover {
+  background-color: #3d3d3d;
+}
 .post-upside {
   display: flex;
   flex-direction: row;
@@ -677,7 +680,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 35%;
-  height: 65%;
+  height: 530px;
   border-radius: 25px;
   display: flex;
   flex-direction: column;
