--- a/home/templates/home/bookmarks.html
+++ b/home/templates/home/bookmarks.html
@@ -59,7 +59,7 @@
 </div>
 {% endblock %}
 {% block center-block %}
-<div class="home-centre-block">
+<div class="home-centre-block" style="display: flex; flex-direction: column; ">
     <div class="center-back-line">
         <button class="circle-back-btn">
             <img src="{% static 'home/img/back-btn.png' %}" class="back-btn" alt="">
@@ -67,14 +67,16 @@
         <h4>Bookmarks</h4>
     </div>
     <search>{% include "includes/search.html" %}</search>
-    <h1 style="position: relative;color: white; top: 20%; left: 20px;">Save posts for later</h1>
-    <p style="position: relative;
-    width: 50%;
-    font-size: 12px;
-    color: #878787;
-    padding-bottom: 15px;
-    top: 22%;">Bookmark posts to easily find them again in the future.</p>
-
+    <div class="empty-bookmarks-block">
+        <h1 style="position: relative;color: white; top: 22%;">Save posts for later</h1>
+        <p style="position: relative;
+        max-width: 350px;
+        font-size: 12px;
+        padding-top: 8px;
+        top: 22%;
+        color: #878787;
+        ">Bookmark posts to easily find them again in the future.</p>
+    </div>
 </div>
 {% endblock %}
 {% block right-block %}
@@ -83,7 +85,7 @@
         {% include "includes/search.html" %}
     </search>
     <div class="home-r-pinned-block">
-        <label>{ Pinned function }</label>
+        <label style="word-break: break-all;">{ Pinned function }</label>
         <img src="{% static 'home/img/pin-icon.png' %}" alt="">
         <p>You can pin your <br>
             desired tab, chats, or <br> 
