--- a/staticfiles/home/css/media.css
+++ b/staticfiles/home/css/media.css
@@ -128,23 +128,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.video-overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    pointer-events: none;
+    cursor: pointer;
 }
 
 /* Счетчик дополнительных медиа */
@@ -160,7 +144,7 @@
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 500;
     cursor: pointer;
 }
 
@@ -204,7 +188,7 @@
     right: 30px;
     color: #fff;
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 500;
     cursor: pointer;
     z-index: 1001;
 }
